tests/sqlite/ui-common/same_param_top_and_section_only_section_map.stderr
error: sql_forge!: parameter :id has no mapping
 --> tests/sqlite/tmp-ui/same_param_top_and_section_only_section_map.rs:9:9
  |
9 |         "SELECT id, name FROM users WHERE id >= :id {#filter}",
  |         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
